Closed Bug 1287446 Opened 9 years ago Closed 9 years ago

Print progress dialog, [Cancel] button is truncated with long document title

Categories

(Toolkit :: Printing, defect)

49 Branch
x86
Windows 10
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla51
Tracking Status
firefox48 --- unaffected
firefox49 + verified
firefox50 + verified
firefox51 --- verified

People

(Reporter: alice0775, Assigned: bobowen)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image screenshot
Steps To Reproduce: 1. Open any page with long document title 2. Print Actual Results: Print progress dialog is truncated. [Cancel] button is truncated See screenshot. Expected Results: At least, UI components should not be truncated.
Blocks: 1189846
Flags: needinfo?(jmathies)
Flags: needinfo?(bobowen.code)
Summary: Print progress dialog is truncated with long document title → Print progress dialog, [Cancel] button is truncated with long document title
Tracking 49/50+ as this is a very visible regression in the print dialog.
Cia local build, Last Good: fd677c353abc First Bad: a68ad13d4957 Triggered by: a68ad13d4957 Bob Owen — Bug 1189846 Part 8: Make RemotePrintJob a print progress listener forwarder. r=jimm
Assignee: nobody → bobowen.code
Flags: needinfo?(jmathies)
The problem here is that when we have a RemotePrintJob we don't return a progress listener from PrintingProxy::ShowProgress, because it will already have been added as a progress listener. These null checks should always have been separate as far as I can tell, it just happened to not cause an issue before. MozReview-Commit-ID: GngheT4Mizd
Attachment #8776951 - Flags: review?(tnikkel)
Attachment #8776951 - Flags: review?(tnikkel) → review+
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/ab7e973f6bdf Check and add nsIPrintProgressParams and print progress listener separately in nsPrintEngine::ShowPrintProgress. r=tnikkel
Flags: needinfo?(bobowen.code)
Meant to say ... thanks again Alice for the (as always) fantastic work on finding this bug.
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Comment on attachment 8776951 [details] [diff] [review] Check and add nsIPrintProgressParams and print progress listener separately in nsPrintEngine::ShowPrintProgress Approval Request Comment [Feature/regressing bug #]: Bug 1189846, which landed in Fx49. [User impact if declined]: Print progress dialog will have problems because document title and URL will not be passed to it correctly. [Describe test coverage new/current, TreeHerder]: Manually tested. [Risks and why]: Low - very simple splitting of two statements protected by two null checks, where each of the null checks is only relevant to one of the statements. [String/UUID change made/needed]: None
Attachment #8776951 - Flags: approval-mozilla-beta?
Attachment #8776951 - Flags: approval-mozilla-aurora?
Comment on attachment 8776951 [details] [diff] [review] Check and add nsIPrintProgressParams and print progress listener separately in nsPrintEngine::ShowPrintProgress Review of attachment 8776951 [details] [diff] [review]: ----------------------------------------------------------------- This patch fixes a visible regression on print progress dialog. Take it 49 beta and aurora.
Attachment #8776951 - Flags: approval-mozilla-beta?
Attachment #8776951 - Flags: approval-mozilla-beta+
Attachment #8776951 - Flags: approval-mozilla-aurora?
Attachment #8776951 - Flags: approval-mozilla-aurora+
This needs QE's help to verify.
Flags: qe-verify+
I've reproduced the initial issue on Windows 10 x86 and Windows 7 x64 on Nightly 2016-07-18. I've tested on latest Nightly 51.0a1 (buildID: 20160808030441): - on Windows 10 x86 - sometimes, after you print the several times the same page, the [Cancel] button from Print progress dialog is still truncated (intermittent issue, not so easy to reproduce) - on Windows 7 x64 I didn't see the issue anymore Any thoughts?
Flags: needinfo?(bobowen.code)
(In reply to Camelia Badau, QA [:cbadau] from comment #14) > I've reproduced the initial issue on Windows 10 x86 and Windows 7 x64 on > Nightly 2016-07-18. > > I've tested on latest Nightly 51.0a1 (buildID: 20160808030441): > - on Windows 10 x86 - sometimes, after you print the several times the same > page, the [Cancel] button from Print progress dialog is still truncated > (intermittent issue, not so easy to reproduce) > - on Windows 7 x64 I didn't see the issue anymore > > Any thoughts? Hmm ... can you reproduce this on Windows 10 on current release (Fx48) with or without e10s? I can't reproduce on Windows 10 with the test page that Alice gave. Either way, can you file a follow-up as I think this must be a separate problem causing the same symptoms.
Flags: needinfo?(bobowen.code)
(In reply to Bob Owen (:bobowen) from comment #15) > Hmm ... can you reproduce this on Windows 10 on current release (Fx48) with > or without e10s? > I can't reproduce on Windows 10 with the test page that Alice gave. > > Either way, can you file a follow-up as I think this must be a separate > problem causing the same symptoms. I can't reproduce this on Windows 10 x86 on Firefox 48 RC (with/without e10s). I filled bug 1294050. Also, I've tested the issue on latest Aurora 50.0a2 (2016-08-10) and Firefox 49 Beta 2 (buildID: 20160808002253) and the "Cancel" button is correctly displayed, is not truncated. I will mark this bug as VERIFIED FIXED.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: